<resources>
    <string name="app_name">SEB-84</string>

    <!-- Activity titles -->
    <string name="title_activity_main">Hero</string>
    <string name="title_activity_level_up">Up your stats</string>
    <string name="title_activity_training">Let\'s train</string>
    <string name="title_activity_battle">To battle!</string>
    <string name="title_activity_btconnect">Select device</string>
    <string name="title_activity_armory">Armory</string>


    <!-- Preferences -->
    <string name="preference_file_key_name" translatable="false">ppmint.com.seb_84.preference</string>
    <string name="preference_hero_name_key" translatable="false">heroName</string>
    <string name="preference_hero_lvl_key" translatable="false">heroLvl</string>
    <string name="preference_hero_HP_key" translatable="false">heroHP</string>
    <string name="preference_hero_Exp_key" translatable="false">heroExp</string>
    <string name="preference_hero_str_key" translatable="false">heroStr</string>
    <string name="preference_hero_Agl_key" translatable="false">heroAgl</string>
    <string name="preference_hero_Int_key" translatable="false">heroInt</string>
    <string name="preference_hero_End_key" translatable="false">heroEnd</string>
    <string name="preference_hero_stPt_key" translatable="false">heroStPt</string>
    <string name="preference_exit_time" translatable="false">exitTime</string>
    <string name="preference_hero_train_time" translatable="false">timeTrain</string>
    <string name="preference_hero_train_mode" translatable="false">trainMode</string>
    <string name="preference_hero_avatar" translatable="false">heroAvatar</string>
    <string name="preference_hp_potions" translatable="false">hpPotions</string>


    <!-- StartScreen -->
    <string name="tvLogo_text" translatable="false">SEB-84</string>
    <string name="tvHero_name">Enter new hero\'s name:</string>
    <string name="btnSet_name">Let\'s ROCK!!!!!</string>
    <string name="toast_noname">Incorrect name!</string>

    <!-- LevelUP Screen -->
    <string name="stStr">STRENGTH</string>
    <string name="stAgl">AGILITY</string>
    <string name="stInt">INTELLECT</string>
    <string name="stEnd">ENDURANCE</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="add" translatable="false">+</string>
    <string name="sub" translatable="false">-</string>
    <string name="action_settings">Settings</string>

    <!-- HeroScreen -->
    <string name="hp" translatable="false">HP</string>
    <string name="exp" translatable="false">EXP</string>
    <string name="stats">Stats:</string>
    <string name="strength">Strength:</string>
    <string name="agility">Agility:</string>
    <string name="intellect">Intellect:</string>
    <string name="endurance">Endurance:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="dodge">Dodge:</string>
    <string name="crit.hit">Crit.hit:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="training">Training</string>
    <string name="toBattle">To Battle</string>
    <string name="lvlUp">Level UP</string>
    <string name="armory">To Armory</string>
    <string name="toast_win">You WIN!!!</string>
    <string name="toast_loose">You LOOSE!!!</string>
    <string name="toast_discon">Opponent has been disconnected.</string>
    <string name="toast_hppotion_found">You\'ve found HP potion!</string>
    <string name="botfight">Bot fight</string>


    <!-- Training -->
    <string name="train">Choose the type of training:</string>
    <string name="train30">Break beton blocks with his hands(30min)</string>
    <string name="train60">Spin backflips(60min)</string>
    <string name="train120">Kill the dragon(120min)</string>
    <string name="train240">Go through the queue in the clinic(240min)</string>
    <string name="trainMain">Training…</string>


    <!-- BTConnect -->
    <string name="get_paired_devices">Get paired devices</string>
    <string name="search_bt">Search</string>
    <string name="action_visible">Make me visible</string>
    <string name="server">I\'m server!</string>

    <!-- BattleActivity -->
    <string name="head">Head</string>
    <string name="chest">Chest</string>
    <string name="lower_back">Lower back</string>
    <string name="foot">Foot</string>
    <string name="onAttack">Attack!</string>
    <string name="load">Waiting for opponent\'s turn</string>


    <!-- ArmoryActivity -->
    <string name="btnSave">Save</string>
    <string name="hero_avatar_description">Your hero avatar</string>
    <string name="change_avatar">Change avatar</string>

    <!-- BattleVSBotActivity -->
    <string name="skeleton">Training skeleton</string>
    <string name="targetdef">Select target and defence!</string>

</resources>
