<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ppmint.com.seb_84.TrainingActivity"
    android:background="#ff0d0d0d">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btnConfTrain"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnConfTrain"
        android:layout_marginTop="32dp"
        android:visibility="visible"
        android:id="@+id/rgTrain">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train30"
            android:id="@+id/rbTrain30"
            android:checked="false"
            android:textColor="#ffffffff"
            android:paddingLeft="35dp"
            android:textStyle="bold"
            android:layout_marginBottom="0dp"
            android:visibility="visible"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train60"
            android:id="@+id/rbTrain60"
            android:checked="false"
            android:textColor="#ffffffff"
            android:paddingLeft="35dp"
            android:textStyle="bold"
            android:layout_marginBottom="0dp"
            android:visibility="visible"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train120"
            android:id="@+id/rbTrain120"
            android:checked="false"
            android:textColor="#ffffffff"
            android:paddingLeft="35dp"
            android:textStyle="bold"
            android:layout_marginBottom="0dp"
            android:visibility="visible"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train240"
            android:id="@+id/rbTrain240"
            android:checked="false"
            android:textColor="#ffffffff"
            android:paddingLeft="35dp"
            android:textStyle="bold"
            android:layout_marginBottom="0dp"
            android:visibility="visible"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/train"
        android:id="@+id/textView18"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

</RelativeLayout>
