<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.td.calculator.BTactivity"
    android:background="#666b66">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPaired"
        android:text="@string/get_paired_devices"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="getListDevices" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvDevices"
        android:layout_centerHorizontal="true"
        android:background="#cfd1c8"
        android:layout_below="@+id/btnPaired" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_bt"
        android:id="@+id/btnSearch"
        android:layout_above="@+id/lvDevices"
        android:layout_alignRight="@+id/lvDevices"
        android:layout_alignEnd="@+id/lvDevices"
        android:onClick="find" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        android:id="@+id/btnServer"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnSearch"
        android:layout_toStartOf="@+id/btnSearch"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp" />

</RelativeLayout>