<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ppmint.com.seb_84.MainActivity"
    android:id="@+id/mayout"
    android:background="#ff0d0d0d">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="---"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/tvName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/hero_t" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbHP"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:indeterminate="false" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbExp"
        android:indeterminate="false"
        android:layout_below="@+id/tvHP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/pbHP"
        android:layout_alignEnd="@+id/pbHP"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/stats"
        android:id="@+id/tvStats"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginLeft="10dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/strength"
        android:id="@+id/textView3"
        android:layout_below="@+id/tvStats"
        android:layout_alignLeft="@+id/tvStats"
        android:layout_alignStart="@+id/tvStats"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/agility"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/intellect"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/endurance"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hp"
        android:id="@+id/tvHP"
        android:layout_alignBottom="@+id/pbHP"
        android:layout_toRightOf="@+id/pbHP"
        android:layout_toEndOf="@+id/pbHP"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/exp"
        android:id="@+id/tvExp"
        android:layout_alignTop="@+id/pbExp"
        android:layout_alignLeft="@+id/tvHP"
        android:layout_alignStart="@+id/tvHP"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvStr"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:textColor="#ffffffff"
        android:text="100"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvAgl"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/tvStr"
        android:layout_alignStart="@+id/tvStr"
        android:textColor="#ffffffff"
        android:text="100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="100"
        android:id="@+id/tvInt"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/tvAgl"
        android:layout_alignStart="@+id/tvAgl"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="100"
        android:id="@+id/tvEnd"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:textColor="#ffffffff"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/tvLvl"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/attack"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/tvStr"
        android:layout_toRightOf="@+id/tvStr"
        android:layout_toEndOf="@+id/tvStr"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/crit.hit"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/tvAgl"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/accuracy"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/tvInt"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defense"
        android:id="@+id/textView10"
        android:layout_alignBottom="@+id/tvEnd"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dodge"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="100"
        android:id="@+id/tvAttack"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:textColor="#ffffffff"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="100"
        android:id="@+id/tvCh"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/tvAttack"
        android:layout_alignStart="@+id/tvAttack"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="100"
        android:id="@+id/tvAccur"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/tvCh"
        android:layout_alignStart="@+id/tvCh"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="100"
        android:id="@+id/tvDef"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/tvAccur"
        android:layout_alignStart="@+id/tvAccur"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="100"
        android:id="@+id/tvDd"
        android:layout_alignBottom="@+id/textView11"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:textColor="#ffffffff"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toBattle"
        android:id="@+id/btnBtl"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training"
        android:id="@+id/btnTrn"
        android:layout_alignTop="@+id/btnBtl"
        android:layout_toLeftOf="@+id/btnBtl"
        android:layout_toStartOf="@+id/btnBtl"
        android:layout_marginRight="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvStPoints"
        android:layout_alignBottom="@+id/tvStats"
        android:layout_toRightOf="@+id/tvStats"
        android:layout_toEndOf="@+id/tvStats"
        android:layout_marginLeft="5dp"
        android:textColor="#ffffffff" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbTrn"
        android:layout_below="@+id/textView11"
        android:layout_toRightOf="@+id/textView6"
        android:layout_alignRight="@+id/tvDd"
        android:layout_alignEnd="@+id/tvDd"
        android:layout_marginTop="5dp"
        android:indeterminate="false"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trainMain"
        android:id="@+id/tvTrn"
        android:layout_alignBottom="@+id/pbTrn"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:textColor="#ffffffff"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>
