<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartScreenActivity"
    android:id="@+id/relyaut"
    android:background="#ff0d0d0d">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pbStartScreen"
        android:layout_marginBottom="101dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:indeterminate="false"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvLogo_text"
        android:id="@+id/textView"
        android:layout_marginBottom="22dp"
        android:textSize="40dp"
        android:layout_above="@+id/pbStartScreen"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvHero_name"
        android:id="@+id/textView2"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/edHero_name"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edHero_name"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:visibility="gone"
        android:inputType="text"
        android:textColor="#ffffffff"
        android:background="#ff535353" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSet_name"
        android:id="@+id/button"
        android:layout_below="@+id/edHero_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:visibility="gone" />

</RelativeLayout>
